--- a/css/app.css
+++ b/css/app.css
@@ -17,3 +17,13 @@
 html {
 	height: 100%;
 }
+.container-fluid{
+	padding-right: 0px !important;
+    padding-left: 0px !important;
+}
+progress {
+  background-color: #f3f3f3;
+  border: 0;
+  height: 18px;
+  border-radius: 9px;
+}
