--- a/css/app.css
+++ b/css/app.css
@@ -35,3 +35,7 @@ html {
     -ms-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
 }
+
+.cursorOnHover {
+	cursor: pointer;
+}
